--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Things Utah Jazz</title>
-    <link rel="stylesheet" type="text/css" href="../styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="../Scratch/css/styles.css">
 </head>
 <body class="homebg">
     <a href="https://peyt1228.github.io/IS201/" target="_blank">Professional Resume</a> |
