--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Things Utah Jazz</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body class="homebg">
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <a href="https://peyt1228.github.io/IS201/" target="_blank">Professional Resume</a> |
     <a id="top" href="#Roster">Roster</a> |
     <a href="#best">Best Plays</a> |
